@@ -5,15 +5,20 @@ import org.eclipse.cargotracker.interfaces.booking.facade.dto.LocationDto;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class LocationDtoAssembler {
 
-	public LocationDto toDto(Location location) {
-		return new LocationDto(location.getUnLocode().value(), location.getName());
-	}
+    public LocationDto toDto(Location location) {
+        return new LocationDto(location.getUnLocode().getIdString(), location.getName());
+    }
 
-	public List<LocationDto> toDtoList(List<Location> allLocations) {
-		return allLocations.stream().map(this::toDto).sorted(Comparator.comparing(LocationDto::nameAndCode)).toList();
-	}
-
+    public List<LocationDto> toDtoList(List<Location> allLocations) {
+        List<LocationDto> dtoList =
+                allLocations.stream()
+                        .map(this::toDto)
+                        .sorted(Comparator.comparing(LocationDto::nameAndCode))
+                        .collect(Collectors.toList());
+        return dtoList;
+    }
 }
