@@ -2,7 +2,7 @@ package org.eclipse.cargotracker.infrastructure.persistence.jpa;
 
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
-import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.PersistenceContext;
 import jakarta.transaction.Status;
 import jakarta.transaction.UserTransaction;
 import org.eclipse.cargotracker.application.util.SampleDataGenerator;
@@ -18,13 +18,15 @@ import org.eclipse.cargotracker.domain.model.voyage.VoyageNumber;
 import org.eclipse.cargotracker.domain.model.voyage.VoyageRepository;
 import org.eclipse.cargotracker.interfaces.RestActivator;
 import org.jboss.arquillian.container.test.api.Deployment;
+
 import org.jboss.arquillian.junit5.ArquillianExtension;
-import org.jboss.arquillian.junit5.container.annotation.ArquillianTest;
 import org.jboss.shrinkwrap.api.ShrinkWrap;
 import org.jboss.shrinkwrap.api.spec.WebArchive;
+
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 
+import java.lang.reflect.Field;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Arrays;
@@ -36,34 +38,25 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.eclipse.cargotracker.Deployments.*;
 import static org.eclipse.cargotracker.domain.model.handling.HandlingEvent.Type.LOAD;
 
-@ArquillianTest
+@ExtendWith(ArquillianExtension.class)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 @Tag("arqtest")
 public class CargoRepositoryTest {
-
     private static final Logger LOGGER = Logger.getLogger(CargoRepositoryTest.class.getName());
+    @Inject UserTransaction utx;
+    @Inject private LocationRepository locationRepository;
 
-    @Inject
-    UserTransaction utx;
+    @Inject private HandlingEventRepository handlingEventRepository;
 
-    @Inject
-    private LocationRepository locationRepository;
+    @Inject private CargoRepository cargoRepository;
 
-    @Inject
-    private HandlingEventRepository handlingEventRepository;
+    @Inject private VoyageRepository voyageRepository;
 
-    @Inject
-    private CargoRepository cargoRepository;
-
-    @Inject
-    private VoyageRepository voyageRepository;
-
-    @Inject
-    private EntityManager entityManager;
+    @PersistenceContext private EntityManager entityManager;
 
     @Deployment
     public static WebArchive createDeployment() {
-        WebArchive war = ShrinkWrap.create(WebArchive.class, "CargoRepositoryTest.war");
+        WebArchive war = ShrinkWrap.create(WebArchive.class, "test-CargoRepositoryTest.war");
 
         addExtraJars(war);
         addDomainModels(war);
@@ -72,6 +65,7 @@ public class CargoRepositoryTest {
         addInfraPersistence(war);
         addApplicationBase(war);
 
+        war.addClass(RestActivator.class);
         war.addClass(SampleDataGenerator.class)
                 .addClass(SampleLocations.class)
                 .addClass(SampleVoyages.class)
@@ -82,33 +76,26 @@ public class CargoRepositoryTest {
                 .addAsWebInfResource("test-web.xml", "web.xml")
 
                 // add Wildfly specific deployment descriptor
-                .addAsWebInfResource("test-jboss-deployment-structure.xml", "jboss-deployment-structure.xml");
+                .addAsWebInfResource(
+                        "test-jboss-deployment-structure.xml", "jboss-deployment-structure.xml");
 
         LOGGER.log(Level.INFO, "War deployment: {0}", war.toString(true));
 
         return war;
     }
 
-    private void startTransaction() throws Exception {
+    @BeforeEach
+    public void setup() {}
+
+    public void startTransaction() throws Exception {
         utx.begin();
         entityManager.joinTransaction();
     }
 
-    private void commitTransaction() throws Exception {
+    public void commitTransaction() throws Exception {
         LOGGER.log(Level.INFO, "UserTransaction status is: {0}", utx.getStatus());
         if (utx.getStatus() == Status.STATUS_ACTIVE) {
             utx.commit();
-        }
-    }
-
-    private void runInTx(Runnable runnable) throws Exception {
-        startTransaction();
-        try {
-            runnable.run();
-            commitTransaction();
-        } catch (Exception e) {
-            utx.rollback();
-            throw new RuntimeException("Transaction rolled back", e);
         }
     }
 
@@ -144,31 +131,46 @@ public class CargoRepositoryTest {
         final TrackingId trackingId = new TrackingId("ABC123");
         final Cargo cargo = cargoRepository.find(trackingId);
         assertThat(cargo.getOrigin()).isEqualTo(SampleLocations.HONGKONG);
-        assertThat(cargo.getRouteSpecification().origin()).isEqualTo(SampleLocations.HONGKONG);
-        assertThat(cargo.getRouteSpecification().destination()).isEqualTo(SampleLocations.HELSINKI);
+        assertThat(cargo.getRouteSpecification().getOrigin()).isEqualTo(SampleLocations.HONGKONG);
+        assertThat(cargo.getRouteSpecification().getDestination())
+                .isEqualTo(SampleLocations.HELSINKI);
 
         assertThat(cargo.getDelivery()).isNotNull();
 
-        final List<HandlingEvent> events = handlingEventRepository.lookupHandlingHistoryOfCargo(trackingId)
-                .getDistinctEventsByCompletionTime();
+        final List<HandlingEvent> events =
+                handlingEventRepository
+                        .lookupHandlingHistoryOfCargo(trackingId)
+                        .getDistinctEventsByCompletionTime();
         assertThat(events).hasSize(3);
 
         HandlingEvent firstEvent = events.get(0);
-        assertHandlingEvent(cargo, firstEvent, HandlingEvent.Type.RECEIVE, SampleLocations.HONGKONG, 100, 160,
+        assertHandlingEvent(
+                cargo,
+                firstEvent,
+                HandlingEvent.Type.RECEIVE,
+                SampleLocations.HONGKONG,
+                100,
+                160,
                 Voyage.NONE);
 
         HandlingEvent secondEvent = events.get(1);
 
-        Voyage hongkongToNewYork = new Voyage.Builder(new VoyageNumber("0100S"), SampleLocations.HONGKONG)
-                .addMovement(SampleLocations.HANGZHOU, LocalDateTime.now(), LocalDateTime.now())
-                .addMovement(SampleLocations.TOKYO, LocalDateTime.now(), LocalDateTime.now())
-                .addMovement(SampleLocations.MELBOURNE, LocalDateTime.now(), LocalDateTime.now())
-                .addMovement(SampleLocations.NEWYORK, LocalDateTime.now(), LocalDateTime.now())
-                .build();
+        Voyage hongkongTonNewYork =
+                new Voyage.Builder(new VoyageNumber("0100S"), SampleLocations.HONGKONG)
+                        .addMovement(
+                                SampleLocations.HANGZOU, LocalDateTime.now(), LocalDateTime.now())
+                        .addMovement(
+                                SampleLocations.TOKYO, LocalDateTime.now(), LocalDateTime.now())
+                        .addMovement(
+                                SampleLocations.MELBOURNE, LocalDateTime.now(), LocalDateTime.now())
+                        .addMovement(
+                                SampleLocations.NEWYORK, LocalDateTime.now(), LocalDateTime.now())
+                        .build();
 
-        assertHandlingEvent(cargo, secondEvent, LOAD, SampleLocations.HONGKONG, 150, 110, hongkongToNewYork);
+        assertHandlingEvent(
+                cargo, secondEvent, LOAD, SampleLocations.HONGKONG, 150, 110, hongkongTonNewYork);
 
-        List<Leg> legs = cargo.getItinerary().legs();
+        List<Leg> legs = cargo.getItinerary().getLegs();
         assertThat(legs).hasSize(3);
 
         Leg firstLeg = legs.get(0);
@@ -182,18 +184,24 @@ public class CargoRepositoryTest {
         commitTransaction();
     }
 
-    private void assertHandlingEvent(Cargo cargo, HandlingEvent event, HandlingEvent.Type expectedEventType,
-                                     Location expectedLocation, int completionTimeMs, int registrationTimeMs, Voyage voyage) {
+    private void assertHandlingEvent(
+            Cargo cargo,
+            HandlingEvent event,
+            HandlingEvent.Type expectedEventType,
+            Location expectedLocation,
+            int completionTimeMs,
+            int registrationTimeMs,
+            Voyage voyage) {
         assertThat(event.getType()).isEqualTo(expectedEventType);
         assertThat(event.getLocation()).isEqualTo(expectedLocation);
         // TODO ignore the registration and completion time assertions.
-        // LocalDateTime expectedCompletionTime =
+        //        LocalDateTime expectedCompletionTime =
         // SampleDataGenerator.offset(completionTimeMs);
-        // assertThat(event.getCompletionTime()).isEqualTo(expectedCompletionTime);
+        //        assertThat(event.getCompletionTime()).isEqualTo(expectedCompletionTime);
         //
-        // LocalDateTime expectedRegistrationTime =
+        //        LocalDateTime expectedRegistrationTime =
         // SampleDataGenerator.offset(registrationTimeMs);
-        // assertThat(event.getRegistrationTime()).isEqualTo(expectedRegistrationTime);
+        //        assertThat(event.getRegistrationTime()).isEqualTo(expectedRegistrationTime);
 
         assertThat(event.getVoyage()).isEqualTo(voyage);
         assertThat(event.getCargo()).isEqualTo(cargo);
@@ -208,129 +216,167 @@ public class CargoRepositoryTest {
     @Test
     @Order(6)
     public void testSave() throws Exception {
-        runInTx(() -> {
-            TrackingId trackingId = new TrackingId("AAA");
-            Location origin = locationRepository.find(SampleLocations.DALLAS.getUnLocode());
-            Location destination = locationRepository.find(SampleLocations.HELSINKI.getUnLocode());
+        startTransaction();
+        TrackingId trackingId = new TrackingId("AAA");
+        Location origin = locationRepository.find(SampleLocations.DALLAS.getUnLocode());
+        Location destination = locationRepository.find(SampleLocations.HELSINKI.getUnLocode());
 
-            Cargo cargo = new Cargo(trackingId, new RouteSpecification(origin, destination, LocalDate.now()));
-            cargoRepository.store(cargo);
+        Cargo cargo =
+                new Cargo(trackingId, new RouteSpecification(origin, destination, LocalDate.now()));
+        cargoRepository.store(cargo);
 
-            cargo.assignToRoute(new Itinerary(List.of(new Leg(
-                    voyageRepository.find(new VoyageNumber("0300A")),
-                    locationRepository.find(SampleLocations.DALLAS.getUnLocode()),
-                    locationRepository.find(SampleLocations.HELSINKI.getUnLocode()),
-                    LocalDateTime.now(), LocalDateTime.now()))));
+        cargo.assignToRoute(
+                new Itinerary(
+                        Arrays.asList(
+                                new Leg(
+                                        voyageRepository.find(new VoyageNumber("0300A")),
+                                        locationRepository.find(
+                                                SampleLocations.DALLAS.getUnLocode()),
+                                        locationRepository.find(
+                                                SampleLocations.HELSINKI.getUnLocode()),
+                                        LocalDateTime.now(),
+                                        LocalDateTime.now()))));
 
-            this.entityManager.flush();
+        this.entityManager.flush();
+        commitTransaction();
 
-            var result = this.entityManager
-                    .createQuery("select c from Cargo c where c.trackingId=:trackingId", Cargo.class)
-                    .setParameter("trackingId", trackingId)
-                    .getSingleResult();
+        // verify in new tx
+        startTransaction();
 
-            assertThat(result.getTrackingId()).isEqualTo(trackingId);
-            assertThat(result.getRouteSpecification().origin()).isEqualTo(origin);
-            assertThat(result.getRouteSpecification().destination()).isEqualTo(destination);
-            assertThat(result.getItinerary().legs()).hasSize(1);
-        });
+        var result =
+                this.entityManager
+                        .createQuery(
+                                "select c from Cargo c where c.trackingId=:trackingId", Cargo.class)
+                        .setParameter("trackingId", trackingId)
+                        .getSingleResult();
+
+        assertThat(result.getTrackingId()).isEqualTo(trackingId);
+        assertThat(result.getRouteSpecification().getOrigin()).isEqualTo(origin);
+        assertThat(result.getRouteSpecification().getDestination()).isEqualTo(destination);
+        assertThat(result.getItinerary().getLegs()).hasSize(1);
+        commitTransaction();
     }
 
     @Test
     @Order(7)
     public void testSpecifyNewRoute() throws Exception {
         LOGGER.log(Level.INFO, "run test :: testSpecifyNewRoute");
+        startTransaction();
         var trackingId = new TrackingId("AAA");
-        runInTx(() -> {
-            Cargo cargo = cargoRepository.find(trackingId);
-            LOGGER.log(Level.INFO, "retrieved cargo: {0}", cargo.toString(true));
-            assertThat(cargo).isNotNull();
+        Cargo cargo = cargoRepository.find(trackingId);
+        LOGGER.log(Level.INFO, "retrieved cargo: {0}", cargo.toString(true));
+        assertThat(cargo).isNotNull();
 
-            Location origin = locationRepository.find(SampleLocations.NEWYORK.getUnLocode());
-            Location destination = locationRepository.find(SampleLocations.HELSINKI.getUnLocode());
+        Location origin = locationRepository.find(SampleLocations.NEWYORK.getUnLocode());
+        Location destination = locationRepository.find(SampleLocations.HELSINKI.getUnLocode());
 
-            cargo.specifyNewRoute(new RouteSpecification(origin, destination, LocalDate.now()));
+        cargo.specifyNewRoute(new RouteSpecification(origin, destination, LocalDate.now()));
 
-            cargoRepository.store(cargo);
-            LOGGER.log(Level.INFO, "saved cargo: {0}", cargo.toString(true));
+        cargoRepository.store(cargo);
+        LOGGER.log(Level.INFO, "saved cargo: {0}", cargo.toString(true));
+        commitTransaction();
 
-            this.entityManager.flush();
+        // verify in the new tx
+        LOGGER.log(Level.INFO, "run test :: verify cargo state");
+        startTransaction();
+        var result =
+                this.entityManager
+                        .createQuery(
+                                "select c from Cargo c where c.trackingId=:trackingId", Cargo.class)
+                        .setParameter("trackingId", trackingId)
+                        .getSingleResult();
+        LOGGER.log(
+                Level.INFO,
+                "query cargo by tracking id: {0}, \n result: {1}",
+                new Object[] {trackingId, result.toString(true)});
+        assertThat(result.getTrackingId()).isEqualTo(trackingId);
+        assertThat(result.getRouteSpecification().getOrigin()).isEqualTo(origin);
+        assertThat(result.getRouteSpecification().getDestination()).isEqualTo(destination);
+        assertThat(result.getItinerary().getLegs()).hasSize(1);
 
-            // verify in the new tx
-            LOGGER.log(Level.INFO, "run test :: verify cargo state");
-            var result = this.entityManager
-                    .createQuery("select c from Cargo c where c.trackingId=:trackingId", Cargo.class)
-                    .setParameter("trackingId", trackingId)
-                    .getSingleResult();
-            LOGGER.log(Level.INFO, "query cargo by tracking id: {0}, \n result: {1}",
-                    new Object[]{trackingId, result.toString(true)});
-            assertThat(result.getTrackingId()).isEqualTo(trackingId);
-            assertThat(result.getRouteSpecification().origin()).isEqualTo(origin);
-            assertThat(result.getRouteSpecification().destination()).isEqualTo(destination);
-            assertThat(result.getItinerary().legs()).hasSize(1);
-        });
+        commitTransaction();
     }
 
     @Test
     @Order(8)
     public void testReplaceItinerary() throws Exception {
-        runInTx(() -> {
-            var trackingId = new TrackingId("AAA");
-            Cargo cargo = cargoRepository.find(trackingId);
-            assertLegCount(trackingId, 1);
+        startTransaction();
+        var trackingId = new TrackingId("AAA");
+        Cargo cargo = cargoRepository.find(trackingId);
+        Long cargoId = getLongId(cargo);
+        assertLegCount(trackingId, 1);
+        // assertThat(jdbcTemplate.queryForObject("select count(*) from Leg where cargo_id = ?", new
+        // Object[]{cargoId}, Integer.class).intValue()).isEqualTo(3);
 
-            Itinerary newItinerary = new Itinerary(Arrays.asList(
-                    new Leg(SampleVoyages.NEW_YORK_TO_DALLAS,
-                            locationRepository.find(SampleLocations.NEWYORK.getUnLocode()),
-                            locationRepository.find(SampleLocations.DALLAS.getUnLocode()),
-                            LocalDateTime.now(),
-                            LocalDateTime.now()),
-                    new Leg(SampleVoyages.DALLAS_TO_HELSINKI,
-                            locationRepository.find(SampleLocations.DALLAS.getUnLocode()),
-                            locationRepository.find(SampleLocations.HELSINKI.getUnLocode()),
-                            LocalDateTime.now(),
-                            LocalDateTime.now())));
+        Itinerary newItinerary =
+                new Itinerary(
+                        Arrays.asList(
+                                new Leg(
+                                        SampleVoyages.NEW_YORK_TO_DALLAS,
+                                        locationRepository.find(
+                                                SampleLocations.NEWYORK.getUnLocode()),
+                                        locationRepository.find(
+                                                SampleLocations.DALLAS.getUnLocode()),
+                                        LocalDateTime.now(),
+                                        LocalDateTime.now()),
+                                new Leg(
+                                        SampleVoyages.DALLAS_TO_HELSINKI,
+                                        locationRepository.find(
+                                                SampleLocations.DALLAS.getUnLocode()),
+                                        locationRepository.find(
+                                                SampleLocations.HELSINKI.getUnLocode()),
+                                        LocalDateTime.now(),
+                                        LocalDateTime.now())));
 
-            cargo.assignToRoute(newItinerary);
+        cargo.assignToRoute(newItinerary);
 
-            cargoRepository.store(cargo);
-            this.entityManager.flush();
+        cargoRepository.store(cargo);
+        commitTransaction();
 
-            // verify in the new tx
+        // verify in the new tx
+        startTransaction();
 
-            assertLegCount(trackingId, 2);
-            // assertThat(jdbcTemplate.queryForObject("select count(*) from Leg where
-            // cargo_id = ?", new
-            // Object[]{cargoId}, Integer.class).intValue()).isEqualTo(1);
-        });
+        assertLegCount(trackingId, 2);
+        // assertThat(jdbcTemplate.queryForObject("select count(*) from Leg where cargo_id = ?", new
+        // Object[]{cargoId}, Integer.class).intValue()).isEqualTo(1);
+        commitTransaction();
     }
 
     private void assertLegCount(TrackingId trackingId, int expected) {
         LOGGER.log(Level.INFO, "count legs by cargo tracking id: {0}", trackingId);
 
-        // Payara/EclipseLinks issue:
-        // the following JPQL returns 0 instead of the real count.
+        //  Payara/EclipseLinks issue:
+        //   the following JPQL returns 0 instead of the real count.
         // var count = this.entityManager.createQuery("select count(e) from Cargo c join
         // c.itinerary.legs e where c.trackingId = :id")
-        // .setParameter("id", trackingId).getSingleResult();
+        //        .setParameter("id", trackingId).getSingleResult();
         // LOGGER.log(Level.INFO, "leg count: {0}", (Long) count);
         // assertThat(((Long) count).intValue()).isEqualTo(expected);
 
-        var count = cargoRepository.find(trackingId).getItinerary().legs().size();
+        var count = cargoRepository.find(trackingId).getItinerary().getLegs().size();
         LOGGER.log(Level.INFO, "leg count: {0}", count);
         assertThat(count).isEqualTo(expected);
     }
 
     // Payara/EclipseLinks issue:
     // it returns 0 , incorrect count
-    // private void assertLegCount(Long cargo_id, int expected) {
-    // LOGGER.log(Level.INFO, "count legs by cargo id: {0}", cargo_id);
-    // var count = this.entityManager.createNativeQuery("select count(*) from Leg where
+    //    private void assertLegCount(Long cargo_id, int expected) {
+    //        LOGGER.log(Level.INFO, "count legs by cargo id: {0}", cargo_id);
+    //        var count = this.entityManager.createNativeQuery("select count(*) from Leg where
     // cargo_id = ?1")
-    // .setParameter(1, cargo_id)
-    // .getSingleResult();
-    // LOGGER.log(Level.INFO, "leg count: {0}", count);
-    // assertThat((count.toString())).isEqualTo(String.valueOf(expected));
-    // }
+    //                .setParameter(1, cargo_id)
+    //                .getSingleResult();
+    //        LOGGER.log(Level.INFO, "leg count: {0}", count);
+    //        assertThat((count.toString())).isEqualTo(String.valueOf(expected));
+    //    }
 
+    private Long getLongId(Object o) {
+        try {
+            Field id = o.getClass().getDeclaredField("id");
+            id.setAccessible(true);
+            return (Long) id.get(o);
+        } catch (Exception e) {
+            throw new RuntimeException();
+        }
+    }
 }
